--- a/_config.yml
+++ b/_config.yml
@@ -70,9 +70,9 @@ JB :
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change theme here if needed.
   #
-  archive_path: /blog/archive.html
-  categories_path : /blog/categories.html
-  tags_path : /blog/tags.html
+  archive_path: /archive.html
+  categories_path : /categories.html
+  tags_path : /tags.html
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
