Fix for feedburner name in config

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author :
   email : 
   github : auraphp
   twitter : auraphp
-  feedburner : auraphp
+  feedname : auraphp
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
