--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : Aura Project for PHP
-tagline: Site Tagline
+tagline: Independent Component Packages for PHP 5.4
 author :
   name : Aura
   email : 
