--- a/config.yml
+++ b/config.yml
@@ -11,9 +11,14 @@ book:
         # available content types: acknowledgement, afterword, appendix, author,
         # chapter, conclusion, cover, dedication, edition, epilogue, foreword,
         # glossary, introduction, license, lof (list of figures), lot (list of
-        # tables), part, preface, prologue, title, toc (table of contents)
+        # tables), part, preface, prologue, title, toc (table of contents)        
+        - { element: acknowledgement, content: thanks.md }
+        - { element: author, content: about-me.md }
         - { element: cover }
-        - { element: toc   }
+        - { element: title }
+        - { element: license, content: cc-by.md }
+        - { element: toc }
+        - { element: lof }
         - { element: chapter, number: 1, content: chapter1.md }
         - { element: chapter, number: 2, content: chapter2.md }
         - { element: chapter, number: 3, content: chapter3.md }
@@ -21,6 +26,7 @@ book:
         - { element: chapter, number: 5, content: chapter5.md }
         - { element: chapter, number: 6, content: chapter6.md }
         - { element: chapter, number: 7, content: chapter7.md }
+        - { element: chapter, number: 8, content: chapter8.md }
         - { element: chapter, number: 9, content: chapter9.md }
         - { element: chapter, number: 10, content: chapter10.md }
         - { element: chapter, number: 11, content: chapter11.md }
