add markdown, hoping we can get rid of warning mails

--- a/_config.yml
+++ b/_config.yml
@@ -123,4 +123,6 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
-  
+
+  # https://help.github.com/articles/migrating-your-pages-site-from-maruku
+  markdown: kramdown
