--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ permalink: /blog/:year/:month/:day/:title
 relative_permalinks: false
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-auto: true
 pygments: true
+markdown: kramdown
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
