--- a/_bookdown/composer.json
+++ b/_bookdown/composer.json
@@ -18,7 +18,6 @@
         }
     ],
     "require": {
-        "bookdown/bookdown": "1.x"
-    },
-    "minimum-stability": "dev"
+        "bookdown/bookdown": "1.x@dev"
+    }
 }
