add trailing slash to permalinks to fix break from Jekyll 2 to 3

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # This is the default format.
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink: /blog/:year/:month/:day/:title
+permalink: /blog/:year/:month/:day/:title/
 
 relative_permalinks: false
 
